# wp-list-scraper

./: README.md  convert_wp_list_to_json.py  coordinates.py  get_clean_data_from_basic_Stolpersteine_list.py  get_list_list.py  image.py  inscription.py  location.py  person.py  pyproject.toml  requirements.txt  stolpersteine_Liste_der_Stolpersteine_in_Pasewalk.json  test.py  wikipedia_lists.csv
lists/: stolpersteine_Liste_der_Stolpersteine_in_Duderstadt.json  stolpersteine_Liste_der_Stolpersteine_in_Pasewalk.json
